tkg-extensions-mods-examples/ingress/contour/warm-up-envoy.yaml
apiVersion: v1
kind: Service
metadata:
  name: warm-up-envoy
  namespace: tanzu-system-ingress
spec:
  ports:
  - port: 80
    targetPort: 8002
  selector:
    app: envoy
  type: ClusterIP
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: warm-up-envoy
  namespace: tanzu-system-ingress
spec:
  virtualhost:
    fqdn: foo.warm-up.contour.local # arbitrary domain
  routes:
    - services:
        - name: warm-up-envoy
          port: 80
